Fixed bad alignment

--- a/www/css/hig.css
+++ b/www/css/hig.css
@@ -1,5 +1,5 @@
 /*********************************** General ***********************************/
-#page_wrapper {
+body #page_wrapper {
 	text-align:center;
 	margin: 0 auto;
 	width: 1450px;
